--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 13th</h1>
-            <h3>Week 27 Day 1 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for May 14th</h1>
+            <h3>Week 27 Day 2 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is a character trait that you admire in other people?
-
+                            What is a character trait or behavior 
+                            that you really dislike in other people?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space black">
                         <img 
-                            src="images/impressive.webp"
-                            alt="vader impressive"
+                            src="images/emperor.webp"
+                            alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
-                        <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
-                        <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
+                        <li><span class="type">Exercise</span>Personal Brand Statement Update with Grammarly</li>
+                        <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
                     </ul>
                 </div>
 
@@ -38,25 +37,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
-                            <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
+                            <li><span class="type">PowerPoint</span>Introduction to Grammarly</li>
+                            <li><span class="type">Exercise</span>Personal Brand Statement with Grammarly</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            
-                            <li><span class="type">PowerPoint</span>Personal Branding [pt 1]</li>
-                            <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding [pt 2]</li>
-                            <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
+                            
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                 </div>
