--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 15th</h1>
-            <h3>Week 27 Day 3 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for May 16th</h1>
+            <h3>Week 27 Day 4 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could magically become proficient at one skill,
-                            what skill would you choose?
+                            Ideally, after graduation, would you prefer to freelance,
+                            or work at a more traditional full-time position? Or both?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space dark-teal">
                         <img 
-                            src="images/lab-experiment.webp"
-                            alt="overthinking fox"
+                            src="images/borntocreate.webp"
+                            alt="born to create"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
-                        <li><span class="type">Exercise</span>Branded Resume Sketches</li>
-                        <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
+                        <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
                     </ul>
                 </div>
 
@@ -38,23 +37,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
-                            <li><span class="type">PowerPoint</span>Branded Resume</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Branded Resume Sketches</li>
-                            <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
+                            <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
+                            <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
