--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 13th</h1>
-            <h3>Week 22 Day 1 (Intro to CSS - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for June 16th</h1>
+            <h3>Week 22 Day 2 (Intro to CSS - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>
-                            What is one of your favorite ice cream flavors? 
-                            Any toppings you like to add?
-                        </li>
+                        <li>What is (or was) your favorite breakfast cereal?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/icecream-cats.jpg"
-                            alt="lazy sundae"
+                            src="images/kamehamehos.jpeg"
+                            alt="kamehamehos"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Box Framing</li>
+                        <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
                     </ul>
                 </div>
 
@@ -36,23 +33,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
-                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Lab Time</span>Project</li>
+                            <li><span class="type">Lab Time</span>Past Assignment Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsiveness Part 1</li>
-                            <li><span class="type">Demo</span>Absolute vs Relative Units</li>
+                            <li><span class="type">Lab Time</span>Extra Credit</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Box Framing</li>
+                            <li><span class="type">Lab Time</span>Study Hints</li>
+                            <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
                         </ul>
                     </div>
                 </div>
