--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 16th</h1>
-            <h3>Week 22 Day 2 (Intro to CSS - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for June 17th</h1>
+            <h3>Week 22 Day 3 (Page Layouts - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is (or was) your favorite breakfast cereal?</li>
+                        <li>What is a hobby you do in your free time?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/kamehamehos.jpeg"
-                            alt="kamehamehos"
+                            src="images/cosplay.jpeg"
+                            alt="cosplay"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                        <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                        <li><span class="type">Exercise</span>Product Showcase Site (?)</li>
                     </ul>
                 </div>
 
@@ -33,23 +35,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Project</li>
-                            <li><span class="type">Lab Time</span>Past Assignment Feedback</li>
+                            <li><span class="type">Quiz</span>CSS Fundamentals</li>
+                            <li><span class="type">PowerPoint</span>Page Layouts - Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Extra Credit</li>
+                            <li><span class="type">Demo</span>Single Column Layouts</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study Hints</li>
-                            <li><span class="type">Survey</span>Intro to CSS Session Wrap Up</li>
+                            <li><span class="type">Exercise</span>Single Column Layouts Drills</li>
+                            <li><span class="type">Exercise</span>Product Showcase Site</li>
                         </ul>
                     </div>
                 </div>
