--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,50 +8,54 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 17th</h1>
-            <h3>Week 26 Day 4 (Finals Week)</h3>
+            <h1>GDWD 105 - Agenda for July 18th</h1>
+            <h3>Week 26 Day 5 (Finals Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            If you could send a message back in time to yourself
+                            on Day 1 of this course, what would you say?
                         </li>
                     </ul>
-                    <div class="img-container more-space reddish-black">
+                    <div class="img-container dark-blue-green">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/time-traveler.webp"
+                            alt="time traveling owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Survey</span>Finals Week Wrap Up</li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <h3>Period 1 (9:10am-11:20am)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">Survey</span>Finals Week Wrap Up</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (10:30am-12pm)</h3>
+                        <h3>Period 2 (11:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
+                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
-                            <li><span class="type">Lab Time</span>Restaurant Site Feedback</li>
+                            <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
                         </ul>
                     </div>
                 </div>
