--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (6025 Cohort)</title>
+        <title>GDWD 105 AGENDA (6027 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 19th</h1>
-            <h3>Week 27 Day 5 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for July 31st</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Which of your remaining classes are you most excited 
-                            for: Motion Graphics (106), Layout Design and Print (107), or
-                            the Portfolio course (108)?
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/finalday.jpg"
-                            alt="final day"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>105 End of Course Survey</li>
-                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
-                        <h3>Announcements (6pm-6:10pm)</h3>
+                        <h3>Warm-up (6pm-6:10pm)</h3>
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>105 End of Course Survey</li>
-                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">Resources</span>FIRST Policies Review and Course Overview</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Dashboard</li>
+                            <li><span class="type">Demo</span>WordPress Dashboard, Themes, and Pages vs. Posts</li>
                         </ul>
                     </div>
                 </div>
