--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 31st</h1>
-            <h3>Week 19 Day 1 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 1st</h1>
+            <h3>Week 19 Day 2 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            How do you feel about the idea of coding?
+                            Are you an early bird, or a night owl?
+
                         </li>
                     </ul>
-                    <div class="img-container ">
+                    <div class="img-container more-space light-gray">
                         <img 
-                            src="images/anxious.webp"
-                            alt="things that make me anxious"
+                            src="images/night-owl.webp"
+                            alt="night owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
@@ -35,23 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Resources</span>FIRST Policies Review and Course Overview</li>
-                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
+                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Block Editor</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Basic Blocks in the Block Editor</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (9:15pm-11pm)</h3>
+                        <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Dashboard</li>
-                            <li><span class="type">Demo</span>WordPress Dashboard, Themes, and Pages vs. Posts</li>
+                           <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
