--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 1st</h1>
-            <h3>Week 19 Day 2 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 4th</h1>
+            <h3>Week 19 Day 3 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Are you an early bird, or a night owl?
-
+                            Coffee? Tea? Or other?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-gray">
+                    <div class="img-container more-space light-green">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/tea-rex.jpg"
+                            alt="tea-rex"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>My First Blog Post</li>
+                        <li><span class="type">Exercise</span>My Second Blog Post</li>
                     </ul>
                 </div>
 
@@ -36,21 +35,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to WordPress UI - Block Editor</li>
+                            <li><span class="type">Demo</span>Container Blocks I - Cover and Media & Text Blocks</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Basic Blocks in the Block Editor</li>
+                            <li><span class="type">Demo</span>Container Blocks II - Gallery and Columns Blocks</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                           <li><span class="type">Exercise</span>My First Blog Post</li>
+                           <li><span class="type">Exercise</span>My Second Blog Post</li>
                         </ul>
                     </div>
                 </div>
