--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for August 4th</h1>
-            <h3>Week 19 Day 3 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for August 5th</h1>
+            <h3>Week 19 Day 4 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Coffee? Tea? Or other?
+                            What is one thing you really like and one thing you 
+                            really dislike about WordPress so far?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-green">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/tea-rex.jpg"
-                            alt="tea-rex"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>My Second Blog Post</li>
+                        <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
                     </ul>
                 </div>
 
@@ -35,21 +36,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Container Blocks I - Cover and Media & Text Blocks</li>
+                            <li><span class="type">Demo</span>Blocks for Layout</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Container Blocks II - Gallery and Columns Blocks</li>
+                            <li><span class="type">Demo</span>Anchors and Internal links</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                           <li><span class="type">Exercise</span>My Second Blog Post</li>
+                            <li><span class="type">Exercise</span>Wiki Page with Sidebar</li>
                         </ul>
                     </div>
                 </div>
